@@ -1,7 +1,9 @@
-$Id: NEWS,v 1.91 2001-03-24 15:46:01 flood Exp $
+$Id: NEWS,v 1.92 2001-03-24 15:56:25 flood Exp $
 
 1.2.2 - CVS
 ---------------------------------
+- Bug 1085 - Better logging of "User is not a UserAlias" and "Can't find
+  user."
 - Bug 1043 - Fixed possible infinite loop in bandwidth throttling code.
 - New RLimit* directives used to control resource usage on support platforms.
 - Bug 1075 - Sub-contexts (<Directory>, etc) weren't being fully copied from
